--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ img {
   display: none;
 }
 
-.nav-link {
+/* .nav-link {
   color: #2e2f42;
   font-size: 16px;
   font-weight: 500;
@@ -87,13 +87,6 @@ img {
   letter-spacing: 0.02em;
   padding: 24px 0;
   display: block;
-}
-.nav-link:first-child {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav-link:nth-child(2) {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current {
@@ -113,18 +106,27 @@ img {
 .nav-link:hover,
 .nav-link:focus {
   color: #404bbf;
-}
+} */
 .address {
   font-style: normal;
   margin-left: auto;
   display: none;
 }
-.address-list {
-  display: flex;
-  gap: 40px;
+
+.nav-link:first-child {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address-link {
+.nav-link:nth-child(2) {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* .address-list {
+  display: flex;
+  gap: 40px;
+} */
+
+/* .address-link {
   color: #434455;
   font-size: 16px;
   line-height: 1.5;
@@ -134,7 +136,7 @@ img {
 .address-link:hover,
 .address-link:focus {
   color: #404bbf;
-}
+} */
 
 .open-menu-btn {
   padding: 0;
@@ -142,6 +144,86 @@ img {
   background-color: transparent;
   cursor: pointer;
   border: none;
+}
+
+@media screen and (min-width: 768px) {
+  .open-menu-btn {
+    display: none;
+  }
+
+  .logo {
+    margin-right: 120px;
+  }
+
+  .nav-list {
+    display: flex;
+    gap: 40px;
+  }
+
+  .nav-link {
+    color: #2e2f42;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 24px 0;
+    display: block;
+  }
+
+  .nav-link:hover,
+  .nav-link:focus {
+    color: #404bbf;
+  }
+
+  .current {
+    position: relative;
+    color: #404bbf;
+  }
+  .current::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    height: 4px;
+    width: 100%;
+  }
+
+  .address {
+    display: block;
+  }
+
+  .address-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .address-link {
+    color: #434455;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .address-link:hover,
+  .address-link:focus {
+    color: #404bbf;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .logo {
+    margin-right: 76px;
+  }
+  .address-list {
+    flex-direction: row;
+    gap: 40px;
+  }
+  .address-link {
+    font-size: 16px;
+    line-height: 1.5;
+  }
 }
 
 /* hero */
