--- a/css/styles.css
+++ b/css/styles.css
@@ -576,7 +576,6 @@ img {
   gap: 72px;
   /* gap: 24px; */
   /* padding-bottom: 120px; */
-  padding-bottom: 96px;
   flex-direction: column;
   align-items: center;
 }
@@ -599,12 +598,17 @@ img {
     flex-wrap: wrap;
     flex-direction: row;
     gap: 72px 24px;
+    align-items: center;
+    justify-content: center;
   }
   .section-team .container {
-    max-width: 584px;
+    max-width: 768px;
   }
 
   .title-team {
+  }
+
+  .img-list {
   }
 }
 
@@ -646,11 +650,14 @@ img {
 
 .item-list-portfolio {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-container {
   padding: 32px 16px;
-  border: 1px solid #e7e9fc;
   border-top: none;
 }
 
@@ -704,28 +711,35 @@ img {
     gap: 72px 24px;
     flex-wrap: wrap;
     flex-direction: row;
+    column-gap: 24px;
+    row-gap: 64px;
   }
 
   .item-list-portfolio {
+    width: calc((100% - 24px) / 2);
   }
   .portfolio-div-container {
-    flex-wrap: wrap;
-    flex-direction: row;
-    gap: 72px 24px;
   }
 
   .section-portfolio .container {
-    max-width: 584px;
   }
 }
 
 @media screen and (min-width: 1158px) {
   .list-portfolio {
-    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
-    flex-direction: row;
+  }
+
+  .section-portfolio .container {
+    max-width: 1158px;
+  }
+
+  .item-list-portfolio {
+    width: calc((100% - 48px) / 3);
   }
 }
 /* !!!!!!!!!!! FOOTER !!!!!!!!!!!!!!!  */
@@ -764,6 +778,8 @@ img {
   display: flex;
   gap: 16px;
   justify-content: center;
+  margin: 0 auto;
+  padding: 0;
 }
 .footer-li-class {
   width: 100%;
@@ -799,12 +815,13 @@ img {
 }
 
 .footer-style-container {
-  margin-right: 120px;
+  /* margin-right: 120px; */
 }
 
 .footer-style {
   display: flex;
   align-items: baseline;
+  flex-direction: column;
 }
 /*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! MODAL !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 
@@ -1035,8 +1052,10 @@ img {
 }
 
 .subscribe-container {
-  max-width: 1200px;
-  margin: 0 auto;
+  /* max-width: 1200px; */
+  /* margin: 0 auto; */
+  display: flex;
+  flex-direction: column;
 }
 
 .form-container {
@@ -1049,12 +1068,15 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
+  text-align: center;
 }
 
 .subscription-form {
   display: flex;
   gap: 24px;
   align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .input-label {
@@ -1104,4 +1126,10 @@ img {
 
 .subscribe-icon {
   margin-left: 16px;
+}
+
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 1158px) {
 }
