--- a/css/styles.css
+++ b/css/styles.css
@@ -416,7 +416,7 @@ img {
 }
 
 .item-list-adventages {
-  width: 264px;
+  /* width: 264px; */
 }
 
 .title-item-adventages {
@@ -480,6 +480,9 @@ img {
   }
   .item-list-adventages {
     width: calc((100% - 3 * 24px) / 4);
+  }
+  .text-item-adventages {
+    font-weight: 500;
   }
 }
 
@@ -758,6 +761,8 @@ img {
   letter-spacing: 0.03em;
   display: inline-block;
   margin-bottom: 16px;
+  display: flex;
+  justify-content: center;
 }
 
 .logo-part-footer {
@@ -773,6 +778,7 @@ img {
 }
 
 .footer-div {
+  margin-bottom: 72px;
 }
 .footer-ul-class {
   display: flex;
@@ -782,7 +788,7 @@ img {
   padding: 0;
 }
 .footer-li-class {
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
 }
 .a-footer-class {
@@ -812,10 +818,12 @@ img {
   letter-spacing: 0.02em;
   color: #ffffff;
   margin-bottom: 16px;
+  text-align: center;
 }
 
 .footer-style-container {
   /* margin-right: 120px; */
+  margin-bottom: 72px;
 }
 
 .footer-style {
@@ -1132,4 +1140,17 @@ img {
 }
 
 @media screen and (min-width: 1158px) {
+  .footer-style {
+    align-items: baseline;
+  }
+  .footer-li-class {
+    width: 100%;
+  }
+  .subscribe-container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .footer-style-container {
+    margin-right: 120px;
+  }
 }
